--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.73.3",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
     "next": "15.3.0",
+    "next-seo": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
-    "react-redux": "^9.2.0"
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
