refactor: fetching and infinite scroll

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "15.3.0",
     "next-seo": "^6.6.0",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
